--- a/technote.toml
+++ b/technote.toml
@@ -21,3 +21,11 @@ orcid = "https://orcid.org/0000-0001-5982-167X"
 name = "Vera C. Rubin Observatory Project Office"
 internal_id = "RubinObs"
 address = "950 N. Cherry Ave., Tucson, AZ 85719, USA"
+[[technote.authors]]
+name = {given = "Gregory P.", family = "Dubois-Felsmann"}
+internal_id = "duboisfelsmanngp"
+orcid = "https://orcid.org/0000-0003-1598-6979"
+[[technote.authors.affiliations]]
+name = "Caltech/IPAC"
+internal_id = "IPAC"
+address = "California Institute of Technology, MS 100-22, Pasadena, CA 91125-2200, USA"
