--- a/technote.toml
+++ b/technote.toml
@@ -5,6 +5,7 @@ canonical_url = "https://dmtn-302.lsst.io"
 github_url = "https://github.com/lsst-dm/dmtn-302"
 github_default_branch = "main"
 date_created = 2024-11-22T17:37:38Z
+doi = "https://doi.org/10.71929/rubin/2583848"
 organization.name = "Vera C. Rubin Observatory"
 organization.ror = "https://ror.org/048g3cy84"
 license.id = "CC-BY-4.0"
